# libofd

./: CMakeLists.txt  README.md
cmake/: libofdcpp6.pc.in  ofdcppConfig.cmake.in
debian/: changelog  control  copyright  libofdcpp-dev.install  libofdcpp0.install  libofdcpp6-0.install  libofdcpp6-dev.install  rules
examples/: CMakeLists.txt  simple_example.cpp
include/ofd/: ofd_reader.h  ofd_writer.h
src/: ofd_reader.cpp  ofd_writer.cpp
src/qt5/: CMakeLists.txt  ofd_writer.cpp
src/qt6/: CMakeLists.txt  ofd_reader.cpp  ofd_writer.cpp
